# tensorleap

./: .gitignore  README.md
examples/IMDb/: .gitignore  README.md  leap.yaml  leap_binder.py  leap_custom_test.py  leap_mapping.yaml  leap_test.py  pyproject.toml
examples/IMDb/IMDb/: config.py  gcs_utils.py  project_config.yaml  utils.py
examples/IMDb/IMDb/data/: preprocess.py
examples/IMDb/imdb/: gcs_utils.py  project_config.yaml  utils.py
examples/IMDb/imdb/data/: preprocess.py
examples/IMDb/model/: .gitattributes  distilbert-imdb.onnx  fabriceyhc-bert-base-uncased-imdb.onnx  imdb-dense.h5  model.py  new_model.py
examples/albert_QA/: .gitignore  README.md  project_config.yaml  pyproject.toml  tensorleap.py
examples/albert_QA/albert/: data_set.py  decoders.py  encoders.py  loss.py  metrices.py  testt.py  utils.py
examples/albert_QA/test/: custome_test.py
examples/albert_qa/: .tensorleap.yaml  README.md  leap.yaml  leap_binder.py  project_config.py  project_config.yaml  pyproject.toml  tensorleap.py
examples/albert_qa/model/: albert.h5
examples/albert_qa/tests/: custom_test.py  leap_custom_test.py
examples/albert_qa/utils/: decoders.py  encoders.py  loss.py  utils.py
examples/armbench-segmentation/: .tensorleap.yaml  README.md  custom_test_tensorleap.py  leap.yaml  leap_custom_test.py  pyproject.toml  tensorleap.py  test_tensorleap.py
examples/armbench-segmentation/armbench_segmentation/: __init__.py  config.py  config_utils.py  gcs_utils.py  metrics.py  object_detection_config.yml  preprocessing.py  utils.py  visualizers.py
examples/armbench-segmentation/armbench_segmentation/decorators/: performance.py
examples/armbench-segmentation/armbench_segmentation/utils/: general_utils.py  ioa_utils.py
examples/armbench-segmentation/armbench_segmentation/visualizers/: visualizers.py  visualizers_getters.py
examples/armbench-segmentation/armbench_segmentation/yolo_helpers/: yolo_utils.py
examples/armbench-segmentation/tests/: custom_test.py  test_tensorleap.py
examples/armbench_segmentation/: README.md  leap.yaml  leap_binder.py  leap_custom_test.py  pyproject.toml
examples/armbench_segmentation/armbench_segmentation/: metrics.py  object_detection_config.yml
examples/armbench_segmentation/armbench_segmentation/data/: preprocessing.py
examples/armbench_segmentation/armbench_segmentation/decorators/: performance.py
examples/armbench_segmentation/armbench_segmentation/utils/: general_utils.py  ioa_utils.py
examples/armbench_segmentation/armbench_segmentation/visualizers/: visualizers_getters.py
examples/cifar10_resnet/: README.md  leap.yaml  leap_binder.py  leap_custom_test.py  leap_custom_tests.py  leap_test.py  pyproject.toml
examples/cifar10_resnet/cifar10_resnet/: config.py  project_config.yaml  utils.py
examples/cifar10_resnet/cifar10_resnet/data/: preprocess.py
examples/cifar10_resnet/model/: resnet.h5
examples/cityscapes/: .gitignore  .tensorleap.yaml  README.md  extract labels.py  extract_labels.py  leap.yaml  leap_binder.py  od_config.yaml  project_config.py  pyproject.toml  tensorleap.py
examples/cityscapes/cityscapes/: coco_od_example.py  gcs_utils.py  metrics.py  preprocessing.py  try_kittu.py
examples/cityscapes/tests/: custom_tests.py  leap_custom_tests.py  train_model.py
examples/cityscapes/utils/: gcs_utils.py  metrics.py  preprocessing.py
examples/cityscapes/utils_all/: gcs_utils.py  general_utils.py  metrics.py  plots.py  preprocessing.py
examples/cityscapes/visualizers/: visualizers.py
examples/cityscapes/yolo_helpers/: yolo_utils.py
examples/cityscapes_od/: README.md  leap.yaml  leap_binder.py  leap_custom_test.py  leap_custom_tests.py  leap_test.py  pyproject.toml
examples/cityscapes_od/cityscapes_od/: config.py  metrics.py  plots.py  visualizers.py
examples/cityscapes_od/tests/: leap_custom_tests.py
examples/cityscapes_od/utils_all/: metrics.py  preprocessing.py
examples/cityscapes_od/visualizers/: visualizers.py
examples/coco/: .gitignore  README.md  preprocess_image.py  pyproject.toml
examples/coco/.tensorleap/: config.toml  dataset.py  model.py
examples/coco/coco/: COCOGenerator.py  adapted_mobilenet_v2.py  infer_model.py  local_data.py  local_train.py  model.py  pix2pix_upsample.py
examples/coco_pytorch/: .gitignore  README.md  pyproject.toml
examples/coco_pytorch/.tensorleap/: config.toml  dataset.py  model.py
examples/coco_pytorch/coco_pytorch/: model.py  model_infer.py  model_infer_save.py  pix2pix_upsample.py  unet.py  utils.py
examples/domain_gap/: README.md  leap.yaml  leap_binder.py  leap_custom_test.py  pyproject.toml  tensorleap.py
examples/domain_gap/domain_gap/: configs.py  metrics.py
examples/domain_gap/tests/: test_tensorleap.py
examples/imdb/: README.md  pyproject.toml
examples/imdb/.tensorleap/: dataset.py
examples/imdb/imdb/: README.md  pyproject.toml  requirement.yaml  utils.py
examples/mnist/: README.md  README.rst  image-analysis.md  leap.yaml  leap_binder.py  leap_custom_test.py  pyproject.toml
examples/mnist/.tensorleap/: config.toml  dataset.py  model.py
examples/mnist/images/: Screen Recording 2023-08-30 at 16.45.07.mov
examples/mnist/mnist/: load_data.py  main.py  model.py  project_config.yaml  utils.py
examples/mnist/model/: model.h5  model.py
examples/optical_flow_raft/: README.md  leap.yaml  leap_binder.py  leap_custom_test.py  leap_custom_tests.py  leap_test.py  pyproject.toml
examples/optical_flow_raft/model/: raft_new.onnx
examples/optical_flow_raft/optical_flow_raft/: config.py
examples/optical_flow_raft/tests/: custom_test_tensorleap.py  test_tensorleap.py
examples/optical_flow_raft/utils/: kittidataset.py
examples/speech-trasncription/librispeech-clean/: .gitignore  leap.yaml  leap_binder.py  leap_custom_test.py  leap_mapping.yaml  pyproject.toml
examples/squad_albert/: README.md  leap.yaml  leap_binder.py  leap_custom_test.py  leap_test.py  pyproject.toml
examples/squad_albert/squad_albert/: config.py  decoders.py  encoders.py  loss.py
examples/squad_albert/tests/: leap_test.py
terraform/: README.md  (+5 more)
(+77 files in other folders)
