[tool.poetry]
name = "imdb"
version = "0.1.0"
description = ""
authors = ["Chen Rothschild <chen.rothschild@tensorleap.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
code-loader = "^0.2.91"
sklearn = "^0.0.post7"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
pyyaml = "^6.0.1"
google-cloud-storage = "^2.10.0"
datasets = "^2.14.4"
tensorflow = "^2.13.0"
transformers = "^4.31.0"
onnx2keras = "^0.0.24"
onnxruntime = "^1.15.1"
tensorflow-probability = "^0.21.0"
onnx = "^1.14.0"
keras = "^2.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "leap_test: check_integration"
custom_test = "leap_custom_test: check_custom_test"