[tool.poetry]
name = "albert-qa"
version = "0.1.0"
description = ""
authors = ["Chen Rothschild <chen.rothschild@tensorleap.ai>"]
readme = "README.md"
packages = [{include = "albert_qa"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
code-loader = "^0.2.85"
textblob = "^0.17.1"
pandas = "1.5.0"
datasets = "^2.14.2"
transformers = "^4.30.2"
readability = "^0.3.1"
sentencepiece = "^0.1.99"
dumpy = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
