[tool.poetry]
name = "cityscapes_od"
version = "0.1.0"
description = ""
authors = ["Chen Rothschild <chen.rothschild@tensorleap.ai>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pycocotools = "^2.0.6"
tqdm = "^4.65.0"
google-cloud-storage = "^2.10.0"
pyyaml = "^6.0"
datasets = "^2.13.1"
matplotlib = "3.7.2"

#onnxruntime = "^1.15.1"
tensorflow = "^2.13.0"
#onnx2keras = "^0.0.24"
automium-web = "^0.1.1"
utils = "^1.0.1"
onnx = "^1.14.0"
onnx2keras = "^0.0.24"
opencv-python = "^4.8.0.74"
webcolors = "^1.13"
tf = "^1.0.0"
code-loader = "^0.2.90"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "leap_test: check_integration"
custom_test = "leap_custom_test: check_custom_integration"

