[tool.poetry]
name = "coco"
version = "0.1.0"
description = ""
authors = ["tom Koren <tom.koren@tensorleap.ai>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
leapcli = "0.2.27"
tensorflow-estimator = "~2.4.0"
tensorflow = "2.8.0"
torch = "^1.11.0"
torchvision = "^0.12.0"
Pillow = "~8.4.0"
scikit-image = "~0.17.2"
pycocotools = "^2.0.4"
opencv-python = "^4.5"
google-cloud-storage = "^2.0.0"
pylint = "2.9.6"
protobuf = "3.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.921"
google-api-python-client-stubs = "0.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.copoetry envre.masonry.api"
