[tool.poetry]
name = "mnist"
version = "0.1.0"
description = ""
authors = ["Danielle Ben Bashat <danielle.benbashat@tensorleap.ai>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.6.0"
keras = "^2.6"
sklearn = "^0.0"
google-cloud-storage = "^2.0.0"
leapcli = "0.2.27"
pandas = "^1.4.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
