[tool.poetry]
name = "raft"
version = "0.1.0"
description = ""
authors = ["Danielle Ben Bashat <daniellebenba@gmail.com>"]
readme = "README.md"
packages = [{include = "domain_gap"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.23.0"
code-loader = "^0.2.83"
matplotlib = "^3.7.1"
google-cloud-storage = "^2.10.0"
scikit-learn = "^1.0.2"
opencv-python = "^4.5.5"
onnxruntime = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
